- fixed #51980 (ScreenResultViewer data table not scrolling properly) - added 'excluded' and 'well type' columns to data table in ScreenResultViewer, increased row count to 20 - collapsed.png and expanded.png now in solid white - tweaked main.jsp text layout
git-svn-id: https://forge.abcd.harvard.edu/svn/screensaver/trunk@781 80c535d0-b110-0410-b4de-9279f94142c3

--- a/web/css/screensaver.css
+++ b/web/css/screensaver.css
@@ -106,14 +106,19 @@ a.heatMapValue:link,a.heatMapValue:visited 	{
 
 .inputLabel {
 	vertical-align: top;
+	font-family: sans-serif;
 }
 
-.column,.keyColumn {
+.column,.keyColumn,.numericColumn {
 	vertical-align: top;
 }
 
 .keyColumn {
 	font-weight: bold;
+}
+
+.numericColumn {
+	text-align: right
 }
 
 .tableHeader,.tableFooter {
